# moz-safari-toolbar-wasm

./: .gitignore  Cargo.toml  README.md  build-wasm.sh
.devcontainer/: devcontainer.json
src/: lib.rs  main.rs
